# fastapi_users

./: .env  Dockerfile  README.md  compose.yml  entrypoint.sh  exemple.env  pyproject.toml  test.db
migrations/: env.py
migrations/versions/: 1a5dbecc5f77_tabela_users.py
tests/: conftest.py  test_users.py
users/: .env  main.py  schemas.py  security.py  settings.py  utils.py
users/database/: database.py  models.py
users/routers/: token.py  users.py
