[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Romario lima <romariolima1006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
jwt = "^1.3.1"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
