[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Romario lima <romariolima1006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
python-multipart = "^0.0.12"
fastapi-mail = "^1.4.1"
cachetools = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
pytest-asyncio = "^0.24.0"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"


[tool.poetry.group.factory-boy.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



